[fix] rename gap class

--- a/spa/styles/title.css
+++ b/spa/styles/title.css
@@ -9,7 +9,7 @@
   line-height: 0.8em;
 }
 
-.custom-gap {
+.title-custom-gap {
   gap: 8rem;
   margin-top: 6rem;
 }
